package dson.crowee;

import dson.crowee.sources.GlobalCroweeManager;

public class Main {
    public static void main() {
        //This method runs the fucking game
        GlobalCroweeManager.startDaShit();
    }
}
