package dson.crowee.localStorage.itemInstances.containers;

import dson.crowee.obj.objects.PlayerCharacter;
import java.util.Set;

public class CurrentPlayerList {
    private static Set<PlayerCharacter> playerSet;
}
